--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,10 @@
 </head>
 <body>
 
-<div id="container"></div>
+<div id="container">
+    <canvas id="mycanvas"></canvas>
+
+</div>
 
 
 <script src="tree/build/three.js">
