--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,7 @@
 <body>
 <div id="admin_content">
     <div id="admin_pano">
-        <img src="pano4.jpg" width="600">
+        <img src="projects/firstproject/firstroom/3/pano.jpg" width="600">
     </div>
     <div id="admin_change">
         <div id="rowchange">
